tech blog: fix back quotes mistakes of wordpress to md migrator

--- a/docs/Tech Blog/2013/2013-02-02-mongodb-v2-2-3-uwsgi-v1-4-5.md
+++ b/docs/Tech Blog/2013/2013-02-02-mongodb-v2-2-3-uwsgi-v1-4-5.md
@@ -24,7 +24,7 @@ This one is quite a bump. I was particulary interested to know that the memory l
 - added --python-version and --perl-version
 - **fixed a gevent memory leak**
 - backported --extract option
-- added HTTP\_Authorization support in mod\_proxy\_uwsgi
+- added HTTP_Authorization support in mod_proxy_uwsgi
 - **backported** --php-fallback
 - **backported** perl uwsgi::postfork and uwsgi::atexit
 - fixed a memory leak with --http-socket during uploads
