--- a/docs/Tech Blog/2013/2013-06-20-py3status-v0-12.md
+++ b/docs/Tech Blog/2013/2013-06-20-py3status-v0-12.md
@@ -13,5 +13,5 @@ I'm glad to announce a new release of **py3status** ! I would like to thank **@
 ## changelog
 
 - bugfix : don't hang horribly when resuming from a suspend (was caused by an IOError exception which could occur when reading/writing to a suspending system).
-- feature : **allow multiple _\-i include\_path_ options to be passed** and handle all the modules thus found.
+- feature : **allow multiple _\-i include_path_ options to be passed** and handle all the modules thus found.
 - feature : **do not try to execute private and special methods** on user-written Py3status' classes.
