--- a/docs/Tech Blog/2013/2013-11-15-keepalived-v1-2-9.md
+++ b/docs/Tech Blog/2013/2013-11-15-keepalived-v1-2-9.md
@@ -14,8 +14,8 @@ Another release, 3 months after the mighty 1.2.8. It seems like upstream has awa
 
 ## highlights
 
-- Jonas Johansson fixed VRRP sync group by sending prio 0 when entering FAULT state. This fix will send prio 0 (VRRP\_PRIO\_STOP) when the VRRP router transists from MASTER to FAULT state. **This will make a sync group leave the MASTER state more quickly** by notifying the backup router(s) instead of having them to wait for time out.
-- Jonas Johansson fixed VRRP to honor preempt\_delay setting on startup.
+- Jonas Johansson fixed VRRP sync group by sending prio 0 when entering FAULT state. This fix will send prio 0 (VRRP_PRIO_STOP) when the VRRP router transists from MASTER to FAULT state. **This will make a sync group leave the MASTER state more quickly** by notifying the backup router(s) instead of having them to wait for time out.
+- Jonas Johansson fixed VRRP to honor preempt_delay setting on startup.
 - Jonas Johansson extended VRRP code for faster sync group transition.
 - Some nice bug fixes to unicast mode.
 
