--- a/docs/Tech Blog/2013/2013-12-15-py3status-v1-1.md
+++ b/docs/Tech Blog/2013/2013-12-15-py3status-v1-1.md
@@ -24,12 +24,12 @@ I'm glad to announce the v1.1 release of **py3status**, roughly 6 months after v
 
 **Thanks to py3status, you can now take action on clicks made on your i3status modules !**
 
-- the new **i3bar\_click\_events.py** module allows you to implement some actions when clicking on your i3bar modules
+- the new **i3bar_click_events.py** module allows you to implement some actions when clicking on your i3bar modules
 - [more info in the wiki](https://github.com/ultrabug/py3status/wiki/handle-i3status-and-i3bar-click-events) and in the [source code of the module](https://github.com/ultrabug/py3status/blob/master/examples/i3bar_click_events.py)
 
 ## new modules
 
-- new generic click event handler using the special module file named **i3bar\_click\_events.py** which will be forwarded any orphan click event for action
+- new generic click event handler using the special module file named **i3bar_click_events.py** which will be forwarded any orphan click event for action
 - new example module displaying Yahoo Weather forcast
 - new example whoami displaying the currently logged in user, inspired by user request on i3 FAQ
 
