--- a/docs/Tech Blog/2014/2014-01-17-uwsgi-v2-0.md
+++ b/docs/Tech Blog/2014/2014-01-17-uwsgi-v2-0.md
@@ -12,13 +12,13 @@ tags:
 
 Yesterday was a big day for the famous application container **uWSGI**. We released the brand new version 2.0 LTS along with quite a huge bump of the ebuild, closing 6 bugs at once. I thought I'd give some input about the ebuild changes and some quick notes about uWSGI. Many thanks again to **@dev-zero** !
 
-## New plugins selection : UWSGI\_PLUGINS
+## New plugins selection : UWSGI_PLUGINS
 
-We introduced a new **USE\_EXPAND** named **UWSGI\_PLUGINS** so that you can now select which plugins to build individually. This is a great step as it makes the compilation more clear and lets you fine tune your uWSGI installation.
+We introduced a new **USE_EXPAND** named **UWSGI_PLUGINS** so that you can now select which plugins to build individually. This is a great step as it makes the compilation more clear and lets you fine tune your uWSGI installation.
 
 Along this work, we had to describe each plugin which was also quite a challenge. To my knownledge, this has not been done anywhere else so [here it is](http://sources.gentoo.org/cgi-bin/viewvc.cgi/gentoo-x86/profiles/desc/uwsgi_plugins.desc?view=markup). Please ping me if you have something to add or if we failed to describe a plugin correctly.
 
-**Migration note :** You will need to change your package.use configuration to switch to using UWSGI\_PLUGINS. As an example, where you had the USE flag _spooler_ enabled you'll now need to use _uwsgi\_plugins\_spooler_.
+**Migration note :** You will need to change your package.use configuration to switch to using UWSGI_PLUGINS. As an example, where you had the USE flag _spooler_ enabled you'll now need to use _uwsgi_plugins_spooler_.
 
 ## uWSGI v2.0 highlights
 
