--- a/docs/Tech Blog/2014/2014-04-16-py3status-v1-4.md
+++ b/docs/Tech Blog/2014/2014-04-16-py3status-v1-4.md
@@ -19,7 +19,7 @@ I'm gathering wish lists an have some (I hope) cool ideas for the next v1.5 rele
 - **new ordering mechanism** with verbose logging on debug mode. fixes rare cases where the modules methods were not always loaded in the same order and caused inconsistent ordering between reloads. thx to **@guiniol** for reporting/debugging and **@IotaSpencer** and **@tasse** for testing.
 - debug: dont catch print() on debug mode
 - debug: add position requested by modules
-- Add new module ns\_checker.py, by **@nawadanp**
+- Add new module ns_checker.py, by **@nawadanp**
 - move README to markdown, change ordering
 - update the README with the new options from --help
 
