--- a/docs/Tech Blog/2014/2014-06-02-uwsgi-v2-0-5-1.md
+++ b/docs/Tech Blog/2014/2014-06-02-uwsgi-v2-0-5-1.md
@@ -18,7 +18,7 @@ Special congratulations to my co-worker **@btall** for his first contribution a
 
 - graceful reload of mule processes (Credits: Paul Egan) : SIGHUP is now sent to mules instead of directly killing them, by default you have 60 seconds to react before a SIGKILL
 - –metrics-no-cores, –stats-no-cores, –stats-no-metrics : don't calculate and process all those core related metrics (gevent anyone ?)
-- **reset\_after\_push** for metrics (Credits: Babacar Tall) : this metric attribute ensures that the metric value is reset to 0 or its hardcoded initial\_value every time the metric is pushed to some external system (like carbon, or statsd)
-- new **metric\_set\_max** and **metric\_set\_min** helpers (Credits: Babacar Tall) : can be used to avoid having to call \`\`metric\_get\`\` when you need a metric to be set at a maximal or minimal value. Another simple use case is to use the \`\`avg\`\` collector to calculate an average between some \*max\* and \*min\* set metrics. Available in C and python.
+- **reset_after_push** for metrics (Credits: Babacar Tall) : this metric attribute ensures that the metric value is reset to 0 or its hardcoded initial_value every time the metric is pushed to some external system (like carbon, or statsd)
+- new **metric_set_max** and **metric_set_min** helpers (Credits: Babacar Tall) : can be used to avoid having to call \`\`metric_get\`\` when you need a metric to be set at a maximal or minimal value. Another simple use case is to use the \`\`avg\`\` collector to calculate an average between some \*max\* and \*min\* set metrics. Available in C and python.
 
 See the full [changelog](http://uwsgi-docs.readthedocs.org/en/latest/Changelog-2.0.5.html) here, especially some interesting bugfixes.
