--- a/docs/Tech Blog/2014/2014-10-08-py3status-v1-6.md
+++ b/docs/Tech Blog/2014/2014-10-08-py3status-v1-6.md
@@ -17,12 +17,12 @@ This version is dedicated to the amazing **@ShadowPrince** who contributed **6 n
 ## Changelog
 
 - core : rename the 'examples' folder to 'modules'
-- core : Fix include\_paths default wrt issue #38, by Frank Haun
+- core : Fix include_paths default wrt issue #38, by Frank Haun
 - new **vnstat** module, by Vasiliy Horbachenko
-- new **net\_rate** module, alternative module for tracking network rate, by Vasiliy Horbachenko
+- new **net_rate** module, alternative module for tracking network rate, by Vasiliy Horbachenko
 - new **scratchpad-counter** module and **window-title** module for displaying current windows title, by Vasiliy Horbachenko
 - new **keyboard-layout** module, by Vasiliy Horbachenko
-- new **mpd\_status** module, by Vasiliy Horbachenko
+- new **mpd_status** module, by Vasiliy Horbachenko
 - new **clementine** module displaying the current "artist - title" playing in Clementine, by François LASSERRE
 - module clementine.py: Make python3 compatible, by Frank Haun
 - add optional CPU temperature to the sysdata module, by Rayeshman
