--- a/docs/Tech Blog/2015/2015-01-04-py3status-v2-0.md
+++ b/docs/Tech Blog/2015/2015-01-04-py3status-v2-0.md
@@ -18,7 +18,7 @@ The logic behind this release is that **py3status now wraps and extends your i
 
 - **[Handle all click events directly from your i3status config](https://github.com/ultrabug/py3status/wiki/Handle-click-events-directly-from-your-i3status-config)**
 
-**For all your i3bar modules i3status and py3status alike** thanks to the new _on\_click parameter_ which you can use like any other i3status.conf parameter on all modules. It has never been so easy to handle click events !
+**For all your i3bar modules i3status and py3status alike** thanks to the new _on_click parameter_ which you can use like any other i3status.conf parameter on all modules. It has never been so easy to handle click events !
 
 This is a quick and small [example](https://github.com/ultrabug/py3status/wiki/Handle-click-events-directly-from-your-i3status-config#examples) of what it looks like :
 
