--- a/docs/Tech Blog/2015/2015-02-27-mongodb-2-6-8-2-4-13-the-upcoming-3-0-0.md
+++ b/docs/Tech Blog/2015/2015-02-27-mongodb-2-6-8-2-4-13-the-upcoming-3-0-0.md
@@ -7,7 +7,7 @@ categories:
 
 I'm a bit slacking on those follow-up posts but with the upcoming [mongoDB 3.x series](http://www.mongodb.com/blog/post/announcing-mongodb-30) and the recent new releases I guess it was about time I talked a bit about what was going on.
 
-##  mongodb-3.0.0\_rcX
+##  mongodb-3.0.0_rcX
 
 [Thanks to the help of Tomas Mozes](https://bugs.gentoo.org/show_bug.cgi?id=540460), we might get a release candidate version of the 3.0.0 version of mongoDB pretty soon in tree shall you want to test it on Gentoo. Feel free to contribute or give feedback in the bug, I'll do my best to keep up.
 
