--- a/docs/Tech Blog/2015/2015-03-31-py3status-v2-4.md
+++ b/docs/Tech Blog/2015/2015-03-31-py3status-v2-4.md
@@ -39,42 +39,42 @@ _if you specify your own inclusion folder(s) with the -i parameter, your modules
 
 $ py3status modules list
 Available modules:
-  battery\_level          Display the battery level.
-  bitcoin\_price          Display bitcoin prices using bitcoincharts.com.
+  battery_level          Display the battery level.
+  bitcoin_price          Display bitcoin prices using bitcoincharts.com.
   bluetooth              Display bluetooth status.
   clementine             Display the current "artist - title" playing in Clementine.
   dpms                   Activate or deactivate DPMS and screen blanking.
   glpi                   Display the total number of open tickets from GLPI.
   imap                   Display the unread messages count from your IMAP account.
-  keyboard\_layout        Display the current keyboard layout.
-  mpd\_status             Display information from mpd.
-  net\_rate               Display the current network transfer rate.
+  keyboard_layout        Display the current keyboard layout.
+  mpd_status             Display information from mpd.
+  net_rate               Display the current network transfer rate.
   netdata                Display network speed and bandwidth usage.
-  ns\_checker             Display DNS resolution success on a configured domain.
-  online\_status          Display if a connection to the internet is established.
+  ns_checker             Display DNS resolution success on a configured domain.
+  online_status          Display if a connection to the internet is established.
   pingdom                Display the latest response time of the configured Pingdom checks.
-  player\_control         Control music/video players.
+  player_control         Control music/video players.
   pomodoro               Display and control a Pomodoro countdown.
-  scratchpad\_counter     Display the amount of windows in your i3 scratchpad.
+  scratchpad_counter     Display the amount of windows in your i3 scratchpad.
   spaceapi               Display if your favorite hackerspace is open or not.
   spotify                Display information about the current song playing on Spotify.
   sysdata                Display system RAM and CPU utilization.
   vnstat                 Display vnstat statistics.
-  weather\_yahoo          Display Yahoo! Weather forecast as icons.
+  weather_yahoo          Display Yahoo! Weather forecast as icons.
   whoami                 Display the currently logged in user.
-  window\_title           Display the current window title.
+  window_title           Display the current window title.
   xrandr                 Control your screen(s) layout easily.
 
 - **get available modules details and configuration**
 
 $ py3status modules details
 Available modules:
-  battery\_level          Display the battery level.
+  battery_level          Display the battery level.
                          
                          Configuration parameters:
-                             - color\_\* : None means - get it from i3status config
+                             - color_\* : None means - get it from i3status config
                              - format : text with "text" mode. percentage with % replaces {}
-                             - hide\_when\_full : hide any information when battery is fully charged
+                             - hide_when_full : hide any information when battery is fully charged
                              - mode : for primitive-one-char bar, or "text" for text percentage ouput
                          
                          Requires:
@@ -83,21 +83,21 @@ Available modules:
                          @author shadowprince, AdamBSteele
                          @license Eclipse Public License
                          ---
-\[...\]
+[...]
 
 ## Modules changelog
 
 - new **bluetooth** module by J.M. Dana
-- new **online\_status** module by @obb
-- new **player\_control** module, by Federico Ceratto
+- new **online_status** module by @obb
+- new **player_control** module, by Federico Ceratto
 - new **spotify** module, by Pierre Guilbert
 - new **xrandr** module to handle your screens layout from your bar
 - **dpms** module activate/deactivate the screensaver as well
 - **imap** module various configuration and optimizations
 - **pomodoro** module can use DBUS notify, play sounds and be paused
 - **spaceapi** module bugfix for space APIs without 'lastchange' field
-- **keyboard\_layout** module incorrect parsing of "setxkbmap -query"
-- **battery\_level** module better python3 compatibility
+- **keyboard_layout** module incorrect parsing of "setxkbmap -query"
+- **battery_level** module better python3 compatibility
 
 ## Other highlights
 
@@ -106,6 +106,6 @@ Available modules:
 - **catch daylight savings time change**
 - ensure **modules methods are always iterated alphabetically**
 - refactor default config file detection
-- rename and move the empty\_class example module to the doc/ folder
-- remove obsolete i3bar\_click\_events module
+- rename and move the empty_class example module to the doc/ folder
+- remove obsolete i3bar_click_events module
 - py3status will soon be [available on debian](https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=780806) thx to Federico Ceratto !
