--- a/docs/Tech Blog/2015/2015-08-17-py3status-v2-5.md
+++ b/docs/Tech Blog/2015/2015-08-17-py3status-v2-5.md
@@ -21,15 +21,15 @@ Please note that this version has **deprecated the legacy implicit module loadin
 
 ## New modules
 
-- new **aws\_bill** module, by Anthony Brodard
-- new **dropboxd\_status** module, by Tjaart van der Walt
-- new **external\_script** module, by Dominik
-- new **nvidia\_temp** module for displaying NVIDIA GPUs' temperature, by J.M. Dana
-- new **rate\_counter** module, by Amaury Brisou
+- new **aws_bill** module, by Anthony Brodard
+- new **dropboxd_status** module, by Tjaart van der Walt
+- new **external_script** module, by Dominik
+- new **nvidia_temp** module for displaying NVIDIA GPUs' temperature, by J.M. Dana
+- new **rate_counter** module, by Amaury Brisou
 - new **screenshot** module, by Amaury Brisou
-- new **static\_string** module, by Dominik
+- new **static_string** module, by Dominik
 - new **taskwarrior** module, by James Smith
-- new **volume\_status** module, by Jan T.
+- new **volume_status** module, by Jan T.
 - new **whatismyip** module displaying your public/external IP as well as your online status
 
 ## Changelog
