--- a/docs/Tech Blog/2016/2016-03-02-py3status-v2-9.md
+++ b/docs/Tech Blog/2016/2016-03-02-py3status-v2-9.md
@@ -31,25 +31,25 @@ This release is made of their stuff, thank you contributors !
 
 ## New modules
 
-- **arch\_updates** module, by Iain Tatch
+- **arch_updates** module, by Iain Tatch
 - **deadbeef** module to show current track playing, by Themistokle Benetatos
 - **icinga2** module, by Ben Oswald
-- **scratchpad\_async** module, by johannes karoff
+- **scratchpad_async** module, by johannes karoff
 - **wifi** module, by Markus Weimar
 
 ## Fixes and enhancements
 
 - Rail Aliiev implement flake8 check via travis-ci, we now have a new build-passing badge
-- fix: handle format\_time tztime parameter thx to @cornerman, fix issue #177
+- fix: handle format_time tztime parameter thx to @cornerman, fix issue #177
 - fix: respect ordering of the ipv6 i3status module even on empty configuration, fix #158 as reported by @nazco
-- battery\_level module: add multiple battery support, by 4iar
-- battery\_level module: added formatting options, by Alexandre Bonnetain
-- battery\_level module: added option hide\_seconds, by Andrwe Lord Weber
+- battery_level module: add multiple battery support, by 4iar
+- battery_level module: added formatting options, by Alexandre Bonnetain
+- battery_level module: added option hide_seconds, by Andrwe Lord Weber
 - dpms module: added color support, by Andrwe Lord Weber
-- spotify module: added format\_down option, by Andrwe Lord Weber
+- spotify module: added format_down option, by Andrwe Lord Weber
 - spotify module: fixed color & playbackstatus check, by Andrwe Lord Weber
 - spotify module: workaround broken dbus, removed PlaybackStatus query, by christian
-- weather\_yahoo module: support woeid, add more configuration parameters, by Rail Aliiev
+- weather_yahoo module: support woeid, add more configuration parameters, by Rail Aliiev
 
 ## What's next ?
 
