--- a/docs/Tech Blog/2016/2016-06-25-py3status-v3-0.md
+++ b/docs/Tech Blog/2016/2016-06-25-py3status-v3-0.md
@@ -37,15 +37,15 @@ The git stat since 2.9 also speaks for itself:
 Along with a cool list of improvements on the existing modules, these are the new modules:
 
 - new **group** module to cycle display of several modules (check it out, it's insanely handy !)
-- new **fedora\_updates** module to check for your Fedora packages updates
+- new **fedora_updates** module to check for your Fedora packages updates
 - new **github** module to check a github repository and notifications
 - new **graphite** module to check metrics from graphite
 - new **insync** module to check your current insync status
 - new **timer** module to have a simple countdown displayed
-- new **twitch\_streaming** module to check is a Twitch Streamer is online
-- new **vpn\_status** module to check your VPN status
-- new **xrandr\_rotate** module to rotate your screens
-- new **yandexdisk\_status** module to display Yandex.Disk status
+- new **twitch_streaming** module to check is a Twitch Streamer is online
+- new **vpn_status** module to check your VPN status
+- new **xrandr_rotate** module to rotate your screens
+- new **yandexdisk_status** module to display Yandex.Disk status
 
 ## Contributors
 
