--- a/docs/Tech Blog/2016/2016-11-21-py3status-v3-3.md
+++ b/docs/Tech Blog/2016/2016-11-21-py3status-v3-3.md
@@ -23,30 +23,30 @@ Writing powerful py3status modules have never been so easy thanks to the [py3 he
 
 This magical object is added automatically to modules and provides a lot of useful methods to help normalize and enhance modules capabilities. This is a non exhaustive list of such methods:
 
-- **format\_units**: to pretty format units (KB, MB etc)
-- **notify\_user:** send a notification to the user
-- **time\_in**: to handle module cache expiration easily
-- **safe\_format**: use the extended formatter to handle the module's output in a powerful way (see below)
-- **check\_commands:** check if the listed commands are available on the system
-- **command\_run:** execute the given command
-- **command\_output:** execute the command and get its output
-- **play\_sound**: sound notifications !
+- **format_units**: to pretty format units (KB, MB etc)
+- **notify_user:** send a notification to the user
+- **time_in**: to handle module cache expiration easily
+- **safe_format**: use the extended formatter to handle the module's output in a powerful way (see below)
+- **check_commands:** check if the listed commands are available on the system
+- **command_run:** execute the given command
+- **command_output:** execute the command and get its output
+- **play_sound**: sound notifications !
 
 ## Powerful control over the modules' output
 
-Using the **self.py3.safe\_format** helper will unleash a feature rich formatter that one can use to conditionally select the output of a module based on its content.
+Using the **self.py3.safe_format** helper will unleash a feature rich formatter that one can use to conditionally select the output of a module based on its content.
 
 - Square brackets `[]` can be used. The content of them will be removed from the output if there is no valid placeholder contained within. They can also be nested.
 - A pipe (vertical bar) `|` can be used to divide sections the first valid section only will be shown in the output.
-- A backslash `\` can be used to escape a character eg `\[` will show `[` in the output.
+- A backslash `\` can be used to escape a character eg `[` will show `[` in the output.
 - `\?` is special and is used to provide extra commands to the format string, example `\?color=#FF00FF`. Multiple commands can be given using an ampersand `&` as a separator, example `\?color=#FF00FF&show`.
 - `{<placeholder>}` will be converted, or removed if it is None or empty. Formatting can also be applied to the placeholder eg `{number:03.2f}`.
 
-### Example format\_string:
+### Example format_string:
 
 This will show `artist - title` if artist is present, `title` if title but no artist, and `file` if file is present but not artist or title.
 
-"\[\[{artist} - \]{title}\]|{file}"
+"[[{artist} - ]{title}]|{file}"
 
 ## More code and documentation tests
 
@@ -64,18 +64,18 @@ A special effort have been put in normalizing modules' output colouring with the
 ## New modules, on and on !
 
 - new **clock module** to display multiple times and dates informations in a flexible way, by @tobes
-- new **coin\_balance** module to display balances of diverse crypto-currencies, by Felix Morgner
+- new **coin_balance** module to display balances of diverse crypto-currencies, by Felix Morgner
 - new **diskdata** module to shows both usage data and IO data from disks, by @guiniol
-- new **exchange\_rate** module to check for your favorite currency rates, by @tobes
-- new **file\_status** module to check the presence of a file, by @ritze
+- new **exchange_rate** module to check for your favorite currency rates, by @tobes
+- new **file_status** module to check the presence of a file, by @ritze
 - new **frame** module to group and display multiple modules inline, by @tobes
 - new **gpmdp** module for Google Play Music Desktop Player by @Spirotot
 - new **kdeconnector** module to display information about Android devices, by @ritze
 - new **mpris** module to control MPRIS enabled music players, by @ritze
-- new **net\_iplist** module to display interfaces and their IPv4 and IPv6 IP addresses, by @guiniol
-- new **process\_status** module to check the presence of a process, by @ritze
+- new **net_iplist** module to display interfaces and their IPv4 and IPv6 IP addresses, by @guiniol
+- new **process_status** module to check the presence of a process, by @ritze
 - new **rainbow** module to enlight your day, by @tobes
-- new **tcp\_status** module to check for a given TCP port on a host, by @ritze
+- new **tcp_status** module to check for a given TCP port on a host, by @ritze
 
 ## Changelog
 
