--- a/docs/Tech Blog/2017/2017-01-27-py3status-v3-4.md
+++ b/docs/Tech Blog/2017/2017-01-27-py3status-v3-4.md
@@ -22,8 +22,8 @@ By looking at the issues and pull requests I can already say that the 3.5 releas
 - **support of python 3.6** thanks to @tobes
 - a major effort in modules standardization, almost all of them support the format parameter now thanks to @lasers
 - modules documentation has been cleaned up
-- **new do\_not\_disturb module** to toggle notifications, by @maximbaz
-- **new rss\_aggregator module** to display your unread feed items, by @raspbeguy
+- **new do_not_disturb module** to toggle notifications, by @maximbaz
+- **new rss_aggregator module** to display your unread feed items, by @raspbeguy
 - **whatsmyip module: added geolocation support** using ip-api.com, by @vicyap with original code from @neutronst4r
 
 See the full [changelog](https://github.com/ultrabug/py3status/blob/master/CHANGELOG) here.
