--- a/docs/Tech Blog/2017/2017-04-10-py3status-v3-5.md
+++ b/docs/Tech Blog/2017/2017-04-10-py3status-v3-5.md
@@ -36,11 +36,11 @@ Last but not least, **the way py3status notifies you when modules fail to load/e
 
 Once again, new and recurring contributors helped the project get better and offer a cool set of modules, thank you contributors !
 
-- **air\_quality** module, to display the air quality of your place, by @**beetleman** and @lasers
+- **air_quality** module, to display the air quality of your place, by @**beetleman** and @lasers
 - **getjson** module to display fields from a json url, by @**vicyap**
-- **keyboard\_locks** module to display keyboard locks states, by @**lasers**
+- **keyboard_locks** module to display keyboard locks states, by @**lasers**
 - **systemd** module to check the status of a systemd unit, by @**adrianlzt**
-- **tor\_rate** module to display the incoming and outgoing data rates of a Tor daemon instance, by @**fmorgner**
+- **tor_rate** module to display the incoming and outgoing data rates of a Tor daemon instance, by @**fmorgner**
 - **xscreensaver** module, by @lasers and @**neutronst4r**
 
 Special mention to @**maximbaz** for his continuous efforts and help. And also a special **community mention** to @**valdur55** for his responsiveness and help for other users on IRC !
