--- a/docs/Tech Blog/2017/2017-08-22-py3status-v3-6.md
+++ b/docs/Tech Blog/2017/2017-08-22-py3status-v3-6.md
@@ -28,7 +28,7 @@ Not an extensive list, check the [changelog](https://github.com/ultrabug/py3stat
 
 - **i3blocks support** (yes, py3status can now wrap i3blocks thanks to @tobes)
 - **cmus** module: to control your cmus music player, by @lasers
-- **coin\_market** module: to display custom cryptocurrency data, by @lasers
+- **coin_market** module: to display custom cryptocurrency data, by @lasers
 - **moc** module: to control your moc music player, by @lasers
 
 ## Milestone 3.7
