--- a/docs/Tech Blog/2018/2018-09-28-py3status-v3-13.md
+++ b/docs/Tech Blog/2018/2018-09-28-py3status-v3-13.md
@@ -28,10 +28,10 @@ Needless to say that the [changelog](https://github.com/ultrabug/py3status/blob/
 
 - documentation updates, especially on the formatter (thanks @L0ric0)  
     
-- py3 storage: use $XDG\_CACHE\_HOME or ~/.cache
+- py3 storage: use $XDG_CACHE_HOME or ~/.cache
 - formatter: multiple variable and feature fixes and enhancements
 - better config parser
-- new modules: lm\_sensors, loadavg, mail, nvidia\_smi, sql, timewarrior, wanda\_the\_fish
+- new modules: lm_sensors, loadavg, mail, nvidia_smi, sql, timewarrior, wanda_the_fish
 
 ## Thank you contributors!
 
