--- a/docs/Tech Blog/2018/2018-11-10-py3status-v3-14.md
+++ b/docs/Tech Blog/2018/2018-11-10-py3status-v3-14.md
@@ -27,7 +27,7 @@ There are now two [optional dependencies](https://py3status.readthedocs.io/en/la
 
 To install them all using pip, simply do:  
 
-pip install py3status\[all\]
+pip install py3status[all]
 
 ## Modules can now react/refresh on udev events  
 
@@ -42,9 +42,9 @@ The xrandr module uses this feature by default which allows the module to instan
     - add ~/.config/i3 as a default config directory, closes #1548
     - add .config/i3/py3status in default user modules include directories
 - add markup (pango) support for modules (#1408), by @MikaYuoadas
-- py3: notify\_user module name in the title (#1556), by @lasers
+- py3: notify_user module name in the title (#1556), by @lasers
 - print module information to sdtout instead of stderr (#1565), by @robertnf
-- battery\_level module: default to using sys instead of acpi (#1562), by @eddie-dunn
+- battery_level module: default to using sys instead of acpi (#1562), by @eddie-dunn
 - imap module: fix output formatting issue (#1559), by @girst
 
 ## Thank you contributors!
