--- a/docs/Tech Blog/2019/2019-01-20-py3status-v3-16.md
+++ b/docs/Tech Blog/2019/2019-01-20-py3status-v3-16.md
@@ -52,17 +52,17 @@ Make sure to read the amazing [changelog](https://github.com/ultrabug/py3status/
 - py3-cmd now allows sending **click events with modifiers**
 - The py3status **\-n / --interval command line argument has been removed** as it was obsolete. We will ignore it if you have set it up, but better remove it to be clean
 - You can specify your own i3status binary path using the new **\-u, --i3status** command line argument thanks to @Dettorer and @lasers
-- Since Yahoo! decided to retire its public & free weather API, the **weather\_yahoo module has been removed**
+- Since Yahoo! decided to retire its public & free weather API, the **weather_yahoo module has been removed**
 
 ### New modules
 
 - new **conky** module: display conky system monitoring (#1664), by lasers
-- new module **emerge\_status**: display information about running gentoo emerge (#1275), by AnwariasEu
+- new module **emerge_status**: display information about running gentoo emerge (#1275), by AnwariasEu
 - new module **hueshift**: change your screen color temperature (#1142), by lasers
-- new module **mega\_sync**: to check for MEGA service synchronization (#1458), by Maxim Baz
+- new module **mega_sync**: to check for MEGA service synchronization (#1458), by Maxim Baz
 - new module **speedtest**: to check your internet bandwidth (#1435), by cyrinux
 - new module **usbguard**: control usbguard from your bar (#1376), by cyrinux
-- new module **velib\_metropole**: display velib metropole stations and (e)bikes (#1515), by cyrinux
+- new module **velib_metropole**: display velib metropole stations and (e)bikes (#1515), by cyrinux
 
 ## A word on 4.0
 
