--- a/docs/Tech Blog/2019/2019-03-25-py3status-v3-17.md
+++ b/docs/Tech Blog/2019/2019-03-25-py3status-v3-17.md
@@ -14,7 +14,7 @@ I'm glad to announce a new (awaited) release of **py3status** featuring support 
 
 ### Updated configuration and custom modules paths detection
 
-The [configuration section](https://py3status.readthedocs.io/en/latest/configuration.html) of the documentation explains the updated detection of the py3status configuration file (with respect of XDG\_CONFIG environment variables):
+The [configuration section](https://py3status.readthedocs.io/en/latest/configuration.html) of the documentation explains the updated detection of the py3status configuration file (with respect of XDG_CONFIG environment variables):
 
 - ~/.config/py3status/config
 - ~/.config/i3status/config
