--- a/docs/Tech Blog/2019/2019-12-28-scylla-summit-2019.md
+++ b/docs/Tech Blog/2019/2019-12-28-scylla-summit-2019.md
@@ -53,7 +53,7 @@ I want to stress a few other things too:
 
 - default TTL on CDC table is 24H
 - expect I/O impact (logical)
-- TTL tombstones can have a hidden disk space cost and nobody was able to tell me if the CDC table was going to be configured with a lower gc\_grace\_period than the default 10 days so **that's something we need to keep in mind and check for**
+- TTL tombstones can have a hidden disk space cost and nobody was able to tell me if the CDC table was going to be configured with a lower gc_grace_period than the default 10 days so **that's something we need to keep in mind and check for**
 - there was no plan to add user information that would allow us to know who actually did the operation, **so that's something I asked for** because it could be used as a cheap and open source way to get auditing!
 
 ## LightWeight Transactions
