--- a/docs/Tech Blog/2020/2020-09-07-py3status-v3-29.md
+++ b/docs/Tech Blog/2020/2020-09-07-py3status-v3-29.md
@@ -40,10 +40,10 @@ Then some interesting bug fixes and enhancements are to be noted
 
 Some modules also got improved
 
-- **battery\_level** module: add power consumption placeholder (#1939) + support more battery paths detection (#1946)
-- **do\_not\_disturb** module: change pause default from False to True
+- **battery_level** module: add power consumption placeholder (#1939) + support more battery paths detection (#1946)
+- **do_not_disturb** module: change pause default from False to True
 - **mpris** module: implement broken chromium mpris interface workaround (#1943)
-- **sysdata** module: add {mem,swap}\_free, {mem,swap}\_free\_unit, {mem,swap}\_free\_percent + try to use default intel/amd sensors first
-- **google\_calendar** module: fix imports for newer google-python-client-api versions (#1948)
+- **sysdata** module: add {mem,swap}_free, {mem,swap}_free_unit, {mem,swap}_free_percent + try to use default intel/amd sensors first
+- **google_calendar** module: fix imports for newer google-python-client-api versions (#1948)
 
 Next version of py3status will certainly drop support for EOL Python 3.5!
