--- a/docs/Tech Blog/2014/2014-05-06-uwsgi-v2-0-4.md
+++ b/docs/Tech Blog/2014/2014-05-06-uwsgi-v2-0-4.md
@@ -12,7 +12,7 @@ tags:
 
 Quick post for an interesting version bump of uWSGI which brings an experimental loopengine for [**python3.4 asyncio**](http://uwsgi-docs.readthedocs.org/en/latest/asyncio.html) (aka tulip) !
 
-If you want to try it out, I added a **python\_asyncio** USE flag. I've also made some cleanups on the ebuild wrt python versions and dropped older versions of uWSGI.
+If you want to try it out, I added a **python_asyncio** USE flag. I've also made some cleanups on the ebuild wrt python versions and dropped older versions of uWSGI.
 
 ## highlights
 
@@ -20,7 +20,7 @@ If you want to try it out, I added a **python\_asyncio** USE flag. I've also ma
 - httprouter advanced timeout management
 - **purge LRU cache (v2) feature**
 - allow duplicate headers in http parsers
-- faster on\_demand Emperor management
+- faster on_demand Emperor management
 - fixed segfault for unnamed loggers
 
 See the full [changelog](http://uwsgi-docs.readthedocs.org/en/latest/Changelog-2.0.4.html) here.
