--- a/docs/Tech Blog/2015/2015-11-26-py3status-v2-7.md
+++ b/docs/Tech Blog/2015/2015-11-26-py3status-v2-7.md
@@ -20,24 +20,24 @@ The result is a **greatly improved click event detection and bar update speed** 
 - **major performance and click event detection improvements** by Daniel Foerster
 - **support of %z on time and tztime modules** fixes #110 and #123 thx to @derekdreery and @olhotak
 - directive %Z and any other failure in parsing the time and tztime modules format will result in using i3status date output
-- add ethernet, wireless and battery **\_first\_** instance detection and support. thx to @rekoil for reporting on IRC
+- add ethernet, wireless and battery **_first_** instance detection and support. thx to @rekoil for reporting on IRC
 - i3status.conf parser handles configuration values with the = char
 
 ## New modules
 
 - new **rt** module: display ongoing tickets from RT queues
 - new **xsel** module: display xsel buffers, by umbsublime
-- new **window\_title\_async** module, by Anon1234
+- new **window_title_async** module, by Anon1234
 
 ## Modules enhancements
 
-- **battery\_level** module: major improvements, documentation, add format option, by Maxim Baz
-- **keyboard\_layout** module: color customisation, add format option, by Ali Mousavi
-- **mpd\_status** module: fix connection leak, by Thomas Sanchez
+- **battery_level** module: major improvements, documentation, add format option, by Maxim Baz
+- **keyboard_layout** module: color customisation, add format option, by Ali Mousavi
+- **mpd_status** module: fix connection leak, by Thomas Sanchez
 - **pomodoro** module: implement format option and add additional display features, by Christoph Schober
 - **spotify** module: fix support for new versions, by Jimmy Garpehäll
 - **spotify** module: add support for colors output based on the playback status, by Sondre Lefsaker
-- **sysdata** module: trim spaces in \`cpu\_temp\`, by beetleman
+- **sysdata** module: trim spaces in \`cpu_temp\`, by beetleman
 - **whatismyip** module: change default check URL and make it configurable
 
 ## Thanks !
