--- a/docs/Tech Blog/2015/2015-12-31-uwsgi-v2-0-12.md
+++ b/docs/Tech Blog/2015/2015-12-31-uwsgi-v2-0-12.md
@@ -12,12 +12,12 @@ tags:
 
 It's been a long time since I made a blog post about a **uWSGI** release but this one is special to me because it contains some features I asked for to a colleague of mine.
 
-For his first contributions to a big Open Source project, our fellow @**shir0kamii** added two features (spooler\_get\_task and -if-hostname-match) which were backported in this release and that we needed at work for quite a long time : congratulations again :)
+For his first contributions to a big Open Source project, our fellow @**shir0kamii** added two features (spooler_get_task and -if-hostname-match) which were backported in this release and that we needed at work for quite a long time : congratulations again :)
 
 ## Highlights
 
 - official **PHP 7 support**
-- uwsgi.**spooler\_get\_task** API to easily read and inspect a spooler file from your code
+- uwsgi.**spooler_get_task** API to easily read and inspect a spooler file from your code
 - \-if-hostname-match regexp on uWSGI configuration files to allow a more flexible configuration based on the hostname of the machine
 
 Of course, all of this is already available on **Gentoo** Linux !
